@@ -32,11 +32,13 @@
       <a href="rest_server_install.html#Hadoop+Distributed+Cache">Hadoop distributed cache.</a></li>
   <li>Download and unpack the HCatalog distribution.</li>
   <li>Set the <code>TEMPLETON_HOME</code> environment variable to the base of the
-      HCatalog REST server installation.  This will usually be <code>HCATALOG_HOME/webhcat</code>.
+      HCatalog REST server installation.  This will usually be same as
+       <code>HCATALOG_HOME</code>.
       This is used to find the Templeton
       configuration.</li>
+  <li>Set JAVA_HOME,HADOOP_PREFIX, and HIVE_HOME environment variables</li>
   <li>Review the <a href="configuration.html">configuration</a>
-      and update or create <code>templeton-site.xml</code> as required. Ensure that
+      and update or create <code>webhcat-site.xml</code> as required. Ensure that
       site specific component installation locations are accurate, especially
       the Hadoop configuration path.  Configuration variables that use a filesystem
       path try to have reasonable defaults, but it's always safe to specify a full
@@ -46,9 +48,9 @@
   <li>Build HCatalog using the command <code>ant jar</code> from the
       top level HCatalog directory.</li>
   <li>Start the REST server with the command
-      <code>bin/templeton_server.sh start</code>.</li>
+      <code>bin/webhcat_server.sh start</code>.</li>
   <li>Check that your local install works.  Assuming that the server is running
-      on port 8080, the following command would give output similar to that shown.
+      on port 50111, the following command would give output similar to that shown.
 <source>
 % curl -i http://localhost:50111/templeton/v1/status
 HTTP/1.1 200 OK
@@ -65,8 +67,8 @@ Server: Jetty(7.6.0.v20120127)
   <section>
   <title>Server Commands</title>
   <ul>
-   <li><strong>Start the server:</strong> <code>bin/templeton_server.sh start</code></li>
-   <li><strong>Stop the server:</strong> <code>bin/templeton_server.sh stop</code></li>
+   <li><strong>Start the server:</strong> <code>sbin/webhcat_server.sh start</code></li>
+   <li><strong>Stop the server:</strong> <code>sbin/webhcat_server.sh stop</code></li>
    <li><strong>End-to-end build, run, test:</strong> <code>ant e2e</code></li>
   </ul>
   </section>
@@ -75,14 +77,14 @@ Server: Jetty(7.6.0.v20120127)
   <title>Requirements</title>
   <ul>
    <li><a href="http://ant.apache.org/">Ant</a>, version 1.8 or higher</li>
-   <li><a href="http://hadoop.apache.org/">Hadoop</a>, version 0.20.205.0</li>
+   <li><a href="http://hadoop.apache.org/">Hadoop</a>, version 1.0.3 or higher</li>
    <li><a href="http://zookeeper.apache.org/">ZooKeeper</a> is required if you are using
     the ZooKeeper storage class. (Be sure to review
     and update the ZooKeeper related <a href="configuration.html">Templeton
     configuration</a>.)</li>
    <li>
      <a href="http://incubator.apache.org/hcatalog/">HCatalog</a>.
-     Version 0.4.0 or higher.  The hcat executable must be both in the
+     Version 0.5.0 or higher.  The hcat executable must be both in the
      PATH and properly configured in the <a
      href="configuration.html">Templeton configuration</a>.
    </li>
@@ -116,12 +118,10 @@ Server: Jetty(7.6.0.v20120127)
 
   <ul>
   <li><strong>Hive</strong>:
-   <a href="http://www.apache.org/dyn/closer.cgi/incubator/hcatalog/">Download</a>
-   the HCatalog tar.gz file and place it in HDFS. (If you need a version
-   that is not yet released, you may need to build it yourself following the HCatalog
-   instructions.)
+   <a href="http://www.apache.org/dyn/closer.cgi/hive/">Download</a>
+   the hive tar.gz file and place it in HDFS. 
 <source>
-hadoop fs -put /tmp/hcatalog-0.5.0.tar.gz /user/templeton/hcatalog-0.5.0.tar.gz
+hadoop fs -put /tmp/hive-0.10.0.tar.gz /apps/templeton/hive-0.10.0.tar.gz
 </source>
   </li>
 
@@ -129,7 +129,7 @@ hadoop fs -put /tmp/hcatalog-0.5.0.tar.gz /user/templeton/hcatalog-0.5.0.tar.gz
    <a href="http://www.apache.org/dyn/closer.cgi/pig">Download</a>
    the Pig tar.gz file and place it into HDFS.  For example:
 <source>
-hadoop fs -put /tmp/pig-0.9.2.tar.gz /user/templeton/pig-0.9.2.tar.gz
+hadoop fs -put /tmp/pig-0.10.1.tar.gz /apps/templeton/pig-0.10.1.tar.gz
 </source>
   </li>
 
@@ -138,18 +138,18 @@ hadoop fs -put /tmp/pig-0.9.2.tar.gz /user/templeton/pig-0.9.2.tar.gz
    following command, substituting your path to the jar for the one below.
 <source>
 hadoop fs -put $HADOOP_PREFIX/hadoop-0.20.205.0/contrib/streaming/hadoop-streaming-0.20.205.0.jar \
- /user/templeton/hadoop-streaming.jar
+ /apps/templeton/hadoop-streaming.jar
 </source>
   </li>
 
   <li><strong>Override Jars</strong>:
-   Place override jars required (if any) into HDFS. <em>Note</em>: As of this writing, all
-   released versions of Hadoop require a patch to properly run Templeton.  This patch is
+   Place override jars required (if any) into HDFS. <em>Note</em>: Hadoop versions
+   prior to 1.0.3 require a patch (HADOOP-7987) to properly run Templeton.  This patch is
    distributed with Templeton (located at
    <code>templeton/src/hadoop_temp_fix/ugi.jar</code>)
    and should be placed into HDFS, as reflected in the current default configuration.
 <source>
-hadoop fs -put ugi.jar /user/templeton/ugi.jar
+hadoop fs -put ugi.jar /apps/templeton/ugi.jar
 </source>
   </li>
   </ul>
@@ -165,37 +165,37 @@ hadoop fs -put ugi.jar /user/templeton/ugi.jar
 
   <tr>
     <td><strong>templeton.pig.archive</strong></td>
-    <td><code>hdfs:///user/templeton/pig-0.9.2.tar.gz</code></td>
+    <td><code>hdfs:///apps/templeton/pig-0.10.1.tar.gz</code></td>
     <td>The path to the Pig archive.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.pig.path</strong></td>
-    <td><code>pig-0.9.2.tar.gz/pig-0.9.2/bin/pig</code></td>
+    <td><code>pig-0.10.1.tar.gz/pig-0.10.1/bin/pig</code></td>
     <td>The path to the Pig executable.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.hive.archive</strong></td>
-    <td><code>hdfs:///user/templeton/hcatalog-0.5.0.tar.gz</code></td>
+    <td><code>hdfs:///apps/templeton/hive-0.10.0.tar.gz</code></td>
     <td>The path to the Hive archive.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.hive.path</strong></td>
-    <td><code>hcatalog-0.5.0.tar.gz/hcatalog-0.5.0/bin/hive</code></td>
+    <td><code>hive-0.10.0.tar.gz/hive-0.10.0/bin/hive</code></td>
     <td>The path to the Hive executable.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.streaming.jar</strong></td>
-    <td><code>hdfs:///user/templeton/hadoop-streaming.jar</code></td>
+    <td><code>hdfs:///apps/templeton/hadoop-streaming.jar</code></td>
     <td>The path to the Hadoop streaming jar file.</td>
   </tr>
 
   <tr>
     <td><strong>templeton.override.jars</strong></td>
-    <td><code>hdfs:///user/templeton/ugi.jar</code></td>
+    <td><code>hdfs:///apps/templeton/ugi.jar</code></td>
     <td>Jars to add to the HADOOP_CLASSPATH for all Map Reduce jobs.
         These jars must exist on HDFS.</td>
   </tr>
