@@ -103,10 +103,7 @@ public class TempletonControllerJob extends Configured implements Tool {
             Map<String, String> env = TempletonUtils.hadoopUserEnv(user,
                 overrideClasspath);
             List<String> jarArgsList = new LinkedList<String>(Arrays.asList(jarArgs));
-            String tokenFile = System.getenv("HADOOP_TOKEN_FILE_LOCATION");
-            if (tokenFile != null) {
-                jarArgsList.add(1, "-Dmapreduce.job.credentials.binary=" + tokenFile);
-            }
+	    
             return execService.run(jarArgsList, removeEnv, env);
         }
 
